# android-activity

./: Cargo.toml  README.md
android-activity/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  game-activity-ffi.h  generate-bindings.sh
android-activity/android-games-sdk/: README.md  copy-files  file_list.txt  import-games-sdk.sh
android-activity/android-games-sdk/game-activity/prefab-src/: prefab.json
android-activity/android-games-sdk/game-activity/prefab-src/modules/game-activity/: module.json
android-activity/android-games-sdk/game-activity/prefab-src/modules/game-activity/include/: common
android-activity/android-games-sdk/game-activity/prefab-src/modules/game-activity/include/game-activity/: GameActivity.h  GameActivityEvents.h  GameActivityLog.h
android-activity/android-games-sdk/game-activity/prefab-src/modules/game-activity/include/game-activity/native_app_glue/: android_native_app_glue.c  android_native_app_glue.h
android-activity/android-games-sdk/game-activity/prefab-src/modules/game-activity/src/common/: system_utils.cpp
android-activity/android-games-sdk/game-activity/prefab-src/modules/game-activity/src/game-activity/: GameActivity.cpp  GameActivityEvents.cpp  GameActivityEvents_internal.h
android-activity/android-games-sdk/game-activity/prefab-src/modules/game-activity/src/game-text-input/: gametextinput.cpp  gametextinput.h
android-activity/android-games-sdk/game-text-input/prefab-src/: prefab.json
android-activity/android-games-sdk/game-text-input/prefab-src/modules/game-text-input/: module.json
android-activity/android-games-sdk/game-text-input/prefab-src/modules/game-text-input/include/game-text-input/: gametextinput.h
android-activity/android-games-sdk/game-text-input/prefab-src/modules/game-text-input/src/game-text-input/: gametextinput.cpp
android-activity/android-games-sdk/include/common/: gamesdk_common.h
android-activity/android-games-sdk/src/common/: system_utils.cpp  system_utils.h
android-activity/game-activity-csrc/: .clang-format
android-activity/game-activity-csrc/common/: gamesdk_common.h
android-activity/game-activity-csrc/game-activity/: GameActivity.cpp  GameActivity.h  GameActivityEvents.cpp  GameActivityEvents.h
android-activity/game-activity-csrc/game-activity/native_app_glue/: android_native_app_glue.c  android_native_app_glue.h
android-activity/game-activity-csrc/game-text-input/: gamecommon.h  gametextinput.cpp  gametextinput.h
android-activity/game-activity-csrc/patches/: 0001-GameActivity-PATCH-capture-KeyEvent-scanCode.patch  0001-GameActivity-PATCH-compilation-fixes.patch  0001-GameActivity-PATCH-enable-tracing.patch  0001-GameActivity-PATCH-remove-unused-variable.patch  0001-GameActivity-PATCH-support-capturing-historic-pointe.patch  0001-Supports-InputAvailable-events-with-GameActivity.patch  README.md
android-activity/native-activity-csrc/native-activity/native_app_glue/: android_native_app_glue.c  android_native_app_glue.h
android-activity/src/: config.rs  error.rs  init.rs  input.rs  jni_utils.rs  lib.rs  main_callbacks.rs  sdk.rs  util.rs  waker.rs
android-activity/src/game_activity/: ffi.rs  ffi_aarch64.rs  ffi_arm.rs  ffi_i686.rs  ffi_x86_64.rs  input.rs  mod.rs
android-activity/src/input/: sdk.rs
android-activity/src/intent/: action.rs  extra.rs  mod.rs
android-activity/src/native_activity/: ffi.rs  ffi_aarch64.rs  ffi_arm.rs  ffi_i686.rs  ffi_x86_64.rs  glue.rs  input.rs  mod.rs
examples/agdk-cpal/: Cargo.toml  README.md
examples/agdk-cpal/app/: build.gradle
examples/agdk-cpal/app/src/main/: AndroidManifest.xml
examples/agdk-cpal/app/src/main/java/co/realfit/agdkcpal/: MainActivity.java
examples/agdk-cpal/src/: lib.rs
examples/agdk-eframe/: .gitignore  Cargo.toml  README.md
examples/agdk-eframe/app/: build.gradle
examples/agdk-eframe/app/src/main/: AndroidManifest.xml
examples/agdk-eframe/src/: lib.rs
examples/agdk-egui/: Cargo.toml  README.md  build.gradle
examples/agdk-egui/app/: build.gradle
examples/agdk-egui/app/src/main/: AndroidManifest.xml
examples/agdk-egui/src/: lib.rs
examples/agdk-mainloop/: .gitignore  Cargo.toml  README.md  build.gradle  gradle.properties
examples/agdk-mainloop/app/: build.gradle
examples/agdk-mainloop/app/src/main/: AndroidManifest.xml
examples/agdk-mainloop/app/src/main/res/values/: themes.xml
examples/agdk-mainloop/gradle/wrapper/: gradle-wrapper.properties
examples/agdk-mainloop/src/: lib.rs
examples/agdk-oboe/: Cargo.toml  README.md
examples/agdk-oboe/app/: build.gradle
examples/agdk-oboe/app/src/main/: AndroidManifest.xml
examples/agdk-oboe/src/: audio.rs  lib.rs
examples/agdk-winit-wgpu/: Cargo.toml  README.md
examples/agdk-winit-wgpu/app/src/main/: AndroidManifest.xml
examples/agdk-winit-wgpu/gradle/wrapper/: gradle-wrapper.properties
examples/agdk-winit-wgpu/src/: lib.rs
examples/na-openxr-info/: Cargo.toml  README.md  build.rs
examples/na-openxr-info/app/: build.gradle
examples/na-openxr-info/app/src/main/: AndroidManifest.xml
examples/na-openxr-info/src/: lib.rs
examples/na-openxr-wgpu/: Cargo.toml  README.md  build.rs
examples/na-openxr-wgpu/app/: build.gradle
examples/na-openxr-wgpu/app/src/main/: AndroidManifest.xml
examples/na-openxr-wgpu/src/: debug_pattern.frag.spv  lib.rs
examples/na-winit-glutin/: .gitignore  Cargo.toml  README.md  build.rs
examples/na-winit-glutin/app/: build.gradle
examples/na-winit-glutin/app/src/main/: AndroidManifest.xml
examples/na-winit-glutin/gradle/wrapper/: gradle-wrapper.properties
examples/na-winit-glutin/src/: lib.rs  shader-frag.glsl  shader-vert.glsl
examples/na-winit-wgpu/: Cargo.toml  README.md
examples/na-winit-wgpu/app/: build.gradle
examples/na-winit-wgpu/app/src/main/: AndroidManifest.xml
examples/na-winit-wgpu/src/: lib.rs
native-activity/: Cargo.toml  LICENSE  README.md  build.rs  generate-bindings.sh  wrapper.h
native-activity/csrc/native-activity/native_app_glue/: android_native_app_glue.h
native-activity/src/: ffi_aarch64.rs  ffi_arm.rs  ffi_i686.rs  input.rs  lib.rs
(+42 files in other folders)
