[package]
name = "android-activity"
version = "0.4.3"
edition = "2021"
keywords = ["android", "ndk"]
readme = "../README.md"
homepage = "https://github.com/rust-mobile/android-activity"
repository = "https://github.com/rust-mobile/android-activity"
documentation = "https://docs.rs/android-activity"
description = "Glue for building Rust applications on Android with NativeActivity or GameActivity"
license = "MIT OR Apache-2.0"

# XXX: Even though we have our own MSRV policy that says we only promise to
# support stable releases over the last three months we actually end up
# constrained by the MSRV policy of Winit, which is currently based on
# supporting Alacritty on Debian Sid, and requires a > 10 month old Rust version
#
# This Winit policiy is unfortunately in conflict with what makes sense for
# Android because versions below 1.68 for Android requires awkward toolchain
# linker workarounds, and can't even be compiled with newer versions of
# `cargo ndk` that removed these linker workarounds.
#
# TODO: Open a PR for Winit's CI to test Android builds using a newer toolchain.
rust-version = "1.64"

[features]
# Note: we don't enable any backend by default since features
# are generally supposed to be additive, while these backends
# are actually mutually exclusive.
#
# In general it's only the final application crate that needs
# to decide on a backend.
default = []
game-activity = []
native-activity = []

[dependencies]
log = "0.4"
jni-sys = "0.3"
cesu8 = "1"
jni = "0.21"
ndk = "0.7"
ndk-sys = "0.4"
ndk-context = "0.1"
android-properties = "0.2"
num_enum = "0.7"
bitflags = "2.0"
libc = "0.2"
thiserror = "1"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[package.metadata.docs.rs]
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]

rustdoc-args = ["--cfg", "docsrs"]
