[package]
name = "android-activity"
version = "0.6.0"
edition = "2021"
keywords = ["android", "ndk"]
readme = "../README.md"
homepage = "https://github.com/rust-mobile/android-activity"
repository = "https://github.com/rust-mobile/android-activity"
documentation = "https://docs.rs/android-activity"
description = "Glue for building Rust applications on Android with NativeActivity or GameActivity"
license = "MIT OR Apache-2.0"

# 1.69 was when Rust last updated the Android NDK version used to build the
# standard library which avoids needing the -lunwind workaround in build tools.
#
# We depend on cargo-ndk for building which has dropped support for the above
# linker workaround.
rust-version = "1.69.0"

[features]
# Note: we don't enable any backend by default since features
# are generally supposed to be additive, while these backends
# are actually mutually exclusive.
#
# In general it's only the final application crate that needs
# to decide on a backend.
default = []
game-activity = []
native-activity = []

[dependencies]
log = "0.4"
jni-sys = "0.3"
cesu8 = "1"
jni = "0.21"
ndk-sys = "0.6.0"
ndk = { version = "0.9.0", default-features = false }
ndk-context = "0.1"
android-properties = "0.2"
num_enum = "0.7"
bitflags = "2.0"
libc = "0.2"
thiserror = "1"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[package.metadata.docs.rs]
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]

rustdoc-args = ["--cfg", "docsrs"]
