[package]
name = "android-activity"
version = "0.6.0"
edition = "2021"
keywords = ["android", "ndk"]
readme = "../README.md"
homepage = "https://github.com/rust-mobile/android-activity"
repository = "https://github.com/rust-mobile/android-activity"
documentation = "https://docs.rs/android-activity"
description = "Glue for building Rust applications on Android with NativeActivity or GameActivity"
license = "MIT OR Apache-2.0"
include = [
    "/build.rs",
    "/android-games-sdk",
    "/LICENSE*",
    "/src",
]

# Even though we could technically still build with 1.69, 1.73 has a fix for the
# definition of the `stat` struct on Android, and so it seems worthwhile drawing
# a line under that to ensure android-activity applications have that fix.
rust-version = "1.73.0"

[features]
# Note: we don't enable any backend by default since features
# are generally supposed to be additive, while these backends
# are actually mutually exclusive.
#
# In general it's only the final application crate that needs
# to decide on a backend.
default = []
game-activity = []
native-activity = []
api-level-30 = ["ndk/api-level-30"]
api-level-33 = ["api-level-30", "ndk/api-level-33"]

[dependencies]
log = "0.4"
jni-sys = "0.4"
cesu8 = "1"
jni = "0.21"
ndk-sys = "0.6.0"
ndk = { version = "0.9.0", default-features = false }
ndk-context = "0.1.1"
android-properties = "0.2"
num_enum = "0.7"
bitflags = "2.0"
libc = "0.2.139"
thiserror = "1"

[build-dependencies]
cc = { version = "1.0.42", features = ["parallel"] }

[package.metadata.docs.rs]
targets = [
    "aarch64-linux-android",
    "armv7-linux-androideabi",
    "i686-linux-android",
    "x86_64-linux-android",
]

rustdoc-args = ["--cfg", "docsrs"]
