[package]
name = "agdk-cpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
android_logger = "0.11.0"
android-activity = { path="../../android-activity", features = ["game-activity"] }
cpal = "0.14"
atomic_float = "0.1"
anyhow = "1"

[lib]
name="main"
crate_type=["cdylib"]