[package]
name = "agdk-egui"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
winit = "0.27"
wgpu = "0.13.0"
pollster = "0.2"
egui = "0.18"
egui-wgpu = { version = "0.18", features = [ "winit" ] }
egui-winit = { version = "0.18", default-features = false }
egui_demo_lib = "0.18"

[patch.crates-io]
winit = { git = "https://github.com/rib/winit", branch = "android-activity-0.27" }
#winit = { path="../../../winit" }

egui = { git = "https://github.com/budde25/egui", branch = "bump-winit" }
egui-wgpu = { git = "https://github.com/budde25/egui", branch = "bump-winit" }
egui-winit = { git = "https://github.com/budde25/egui", branch = "bump-winit" }
egui_extras = { git = "https://github.com/budde25/egui", branch = "bump-winit" }
egui_demo_lib = { git = "https://github.com/budde25/egui", branch = "bump-winit" }

#egui = { git = "https://github.com/emilk/egui" }
#egui-wgpu = { git = "https://github.com/emilk/egui" }
#egui-winit = { git = "https://github.com/emilk/egui" }
#egui_extras = { git = "https://github.com/emilk/egui" }
#egui_demo_lib = { git = "https://github.com/emilk/egui" }

#egui = { path = "../../../egui/egui" }
#egui-wgpu = { path = "../../../egui/egui-wgpu" }
#egui-winit = { path = "../../../egui/egui-winit" }
#egui_extras = { path = "../../../egui/egui_extras" }
#egui_demo_lib = { path = "../../../egui/egui_demo_lib" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"
android-activity = { path="../../android-activity", features = [ "game-activity" ] }

# Since Winit also depends on android-activity (via a github url) we need to
# make sure we only resolve a single implementation.
[patch.'https://github.com/rib/android-activity']
android-activity = { path="../../android-activity", features = [ "game-activity" ] }

[features]
default = []
desktop = []

[lib]
name="main"
crate_type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="egui-test"
required-features = [ "desktop" ]