[package]
name = "agdk-mainloop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "tracing-log",
] }
paranoid-android = "0.2"
tracing-log = "0.2"

android-activity = { path = "../../android-activity", features = [
    "game-activity",
] }
jni = "0.22"

[lib]
name = "main"
crate-type = ["cdylib"]
