[package]
name = "na-winit-glutin"
version = "0.1.0"
edition = "2021"


[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]

desktop = []

egl = ["glutin/egl"]
glx = ["glutin/glx", "glutin/x11", "winit/x11", "x11"]
wgl = ["glutin/wgl"]
x11 = ["glutin/x11", "winit/x11"]
wayland = ["glutin/wayland", "winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita-notitle"]


[dependencies]
log = "0.4"
# TODO: switch to stable release once 0.28 is released
winit = { git = "https://github.com/rust-windowing/winit", features = ["android-native-activity"] }
glutin = "0.30"
raw-window-handle = "0.5.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"

[patch.crates-io]

# Note:
# Since android-activity is responsible for invoking the `android_main`
# entrypoint for a native Rust application there can only be a single
# implementation of the crate linked with the application.
#
# To avoid conflicts it's generally recommend to rely on Winit to pull
# in a compatible version of android-activity but if you'd like to build
# this example against the local checkout of android-activity you should
# specify a patch here to make sure you also affect the version that Winit
# uses.
#
# Note: also check that the local android-activity/Cargo.toml version matches
# the version of android-activity that Winit depends on (in case you need to check
# out a release branch locally to be compatible)
#android-activity = { path = "../../android-activity" }

[lib]
#name="main"
crate_type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="test-winit-glutin"
required-features = [ "desktop" ]
